bake/dev/web-backend/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://saas-snd-dev-vault-eus.vault.azure.net/certificates/neolicenseai/1a55b10cceaf4343adfca9ad9ed7c13b
  name: web-backend 
  namespace: bake
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: api-dev.neolicense.ai
    http:
      paths:
      - backend:
          service:
            name: web-backend
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: finclient-dev.api-dev.neolicense.ai
    http:
      paths:
      - backend:
          service:
            name: web-backend
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: clienta-dev.api-dev.neolicense.ai
    http:
      paths:
      - backend:
          service:
            name: web-backend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api-dev.neolicense.ai
    - clienta-dev.api-dev.neolicense.ai
    - finclient-dev.api-dev.neolicense.ai
    secretName: keyvault-neolicenseai
